<resources>
    <string name="app_name">GNSS Agent</string>
    <string name="title_location_permission">Enable GNSS Agent to get location updates?</string>
    <string name="text_location_permission" translatable="false">blahblah</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="startLog">Start logging</string>
    <string name="stopLog">Stop logging</string>
    <string name="selectCoder">Select logger:</string>
    <string name="locationOff">Please enable location service.</string>
    <string name="satStatus">Satellite status</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="galileo" translatable="false">GALILEO</string>
    <string name="glonass" translatable="false">GLONASS</string>
    <string name="beidou" translatable="false">BDS</string>
    <string name="sbas" translatable="false">SBAS</string>
    <string name="qzss" translatable="false">QZSS</string>
    <string name="visible">Visible</string>
    <string name="used">Used</string>
    <string name="elapsed">Elapsed:</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_open">Open</string>
    <string name="emptyString" translatable="false">""</string>
    <string name="fq" translatable="false">L1/L5</string>
    <string name="default_map">Default map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="app_settings_details">Go to application settings</string>
    <string name="log_time_format">Time settings</string>
    <string name="go_to_files">Files</string>
    <string name="go_to_map">Map</string>
    <string name="go_to_main">Home</string>
    <string name="gpsTimeCaption">GPS Time:</string>
    <string name="go_to_documents_directory">Go to documents directory</string>

    <string name="cndbhz">Carrier to noise density [dB-Hz]</string>

    <string-array name="coders">
        <item>BNC style logger</item>
        <item>Just log it as is</item>
    </string-array>

    <string name="title_activity_maps" translatable="false">GNSS Agent</string>
    <string name="title_activity_files" translatable="false">GNSS Agent</string>

    <string name="all_files">All files</string>
    <string name="obs_files">Obs files</string>
    <string name="nav_files">Nav files</string>
    <string name="pos_files">Pos files</string>
    <string name="action_settings">Settings</string>

    <string name="sat_status_tab">Sat status</string>
    <string name="sat_strength_tab">Sat strength</string>

    <string name="delete_file">Delete file</string>
    <string name="delete_file_question">Are you sure you want to delete this file?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="utc" translatable="false">UTC</string>
    <string name="gps_week_seconds">GPS week, seconds of week</string>
    <string name="gps_standard" translatable="false">GPS yyyy MM dd hh mm ss</string>

    <string name="cannot_log">Cannot save data to file. Log is stopping...</string>
    <string name="cannot_start_log">Cannot create file. Log will not start.</string>

    <string name="log_service">Log Service</string>
    <string name="log_in_progress">Log in progress...</string>
    <string name="log_saved">Log stopped, saved...</string>
    <string name="log_started">Log started...</string>

    <string name="send_log">Gnss Agent Log File</string>
    <string name="log_removed">File removed.</string>

    <string name="setIntegerize">Integerize time</string>
</resources>
